# CausalFaith

./: .gitignore  README.md  pyproject.toml
causalfaith/: __init__.py  confounding.py  crossfit.py  faithfulness.py  intervention_quality.py  preprocessing.py
configs/: preprocess_replogle.yaml
docs/: data_protocol.md  diagnostics.md  source_notes.md
manifests/: README.md  k562_essential_processed.json
results/diagnostics/: batch_divergence.csv  cellcycle_bias.csv  confounding_summary.json  kd_efficiency.csv  kd_efficiency_summary.json  perturbation_quality_summary.json  perturbation_quality_table.csv
scripts/: build_perturbation_quality_table.py  download_causalbench_data.py  preprocess_replogle.py  run_cell_cycle_scoring.py  run_confounding.py  run_crossfit.py  run_faithfulness.py  run_intervention_quality.py  run_methods.py  write_data_manifest.py
